--- a/BackgroundModelChecking.tex
+++ b/BackgroundModelChecking.tex
@@ -172,7 +172,7 @@ In the following we shall introduce two general types of model checking  which a
 
 \subsection*{Inductive Verification}
 
-Inductive verification attempts to use induction over the transition relation in order to perform verification formulated in such a way that a SAT solver can be used to solve the problem~\cite{MS00}. The base case checks that the safety property holds in all initial states of the system. The step case checks that if the system is in a state in which the safety property holds and a transition occurs then the resulting state is also safe, for all possible safe states and transitions out of those states. This method has the advantage over other model checking techniques that it is fast and can verify the entire state space. The disadvantage is that if the safety property is violated then you obtain a pair of states as a counterexample instead of a sequence of states that form a counterexample trace. Having a counterexample trace is more useful as it allows engineers to determine how unsafe or erroneous states are reached from the root cause.
+Inductive verification attempts to use induction over the transition relation in order to perform verification formulated in such a way that a SAT solver can be used to solve the problem~\cite{MS00}. The base case checks that the safety property holds in all initial states of the system. The step case checks that if the system is in a state in which the safety property holds and a transition occurs then the resulting state is also safe, for all possible safe states and transitions out of those states. This method has the advantage over other model checking techniques that it is fast and can verify the entire state space. The disadvantage is that if the safety property is violated then you obtain a pair of states as a counterexample instead of a sequence of states that form a counterexample trace. Having a counterexample trace is more useful as it allows engineers to determine how unsafe or erroneous states are reached from the root cause. An improvement on this is k-induction \cite{EN03} which verifies a base case of k-steps before proving the induction step.
 \medskip
 \begin{mydef}[Inductive Verification]
 Given a transition system $M$ and a safety property $\phi$ we define inductive verification as follows:
